--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "bn.js": "^5.2.0",
     "chrome-tabs": "^5.4.0",
     "cloudinary": "^1.32.0",
+    "javascript-time-ago": "^2.5.9",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
@@ -78,6 +79,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.3",
     "react-secure-storage": "^1.2.2",
+    "react-time-ago": "^7.3.1",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
     "react-use-websocket": "^4.3.1",
