--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "bn.js": "^5.2.0",
     "chrome-tabs": "^5.4.0",
     "cloudinary": "^1.32.0",
-    "javascript-time-ago": "^2.5.9",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
@@ -59,6 +58,7 @@
     "graphql": "^16.6.0",
     "hex-to-rgba": "2.0.1",
     "html-to-image": "^1.10.8",
+    "javascript-time-ago": "^2.5.9",
     "jotai": "^2.2.2",
     "keen-slider": "^6.8.5",
     "lightweight-charts": "^3.8.0",
@@ -68,6 +68,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-bottom-drawer": "^0.1.1",
+    "react-confetti": "^6.1.0",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-fetch-streams": "^1.1.2",
