--- a/.env.sample
+++ b/.env.sample
@@ -1,13 +1,25 @@
-VITE_ENV = TESTNET
-VITE_MODE = developement
+VITE_ENV = testnet
+VITE_MODE = development
 BASE_PATH = public
-VITE_WALLET_CONNECT_PROJECT_ID = YOUR_WC_PROJECT_ID
-VITE_SIGN_MESSAGE = Sign to verify user address
+VITE_WALLET_CONNECT_PROJECT_ID = 0360062041a4d5f3ebc235e4ca037e06
+VITE_SIGN_MESSAGE_2 = Sign to verify your user address with Buffer Finance v2.5 on Arbitrum One and Arbitrum Goerli
 VITE_INSTANT_TRADING_HOST = https://instant-trading-api.buffer.finance/instant-trading/
-VITE_INSTANT_TRADING_HOST_DEVELOPMENT = https://api-development-6a7f.up.railway.app/instant-trading/
-VITE_INSTANT_TRADING_HOST_TESTNET =  https://instant-trading-testnet-api.buffer.finance/instant-trading/
+VITE_INSTANT_TRADING_HOST_DEVELOPMENT = https://api-development-6a7f.up.railway.app/
+VITE_INSTANT_TRADING_HOST_TESTNET = https://instant-trading-testnet-api.buffer.finance/
+
+VITE_UP_DOWN_V3_HOST_TESTNET = https://instant-trading-backend-production-84c6.up.railway.app/
+
+VITE_ABOVE_BEWLOW_API_HOST_TESTNET = https://testnet.api.ab.buffer.finance/
+VITE_ABOVE_BEWLOW_API_HOST_DEVELOPMENT = https://api.ab.buffer.finance/
 VITE_PRICE_QUERY_HOST = https://oracle.buffer.finance/price/
-VITE_PARTICLE_PROJECT_ID = NOT_NEEDED
-VITE_pARTICLE_APP_ID = NOT_NEEDED
-VITE_PARTICLE_CLIENT_KEY = NOT_NEEDED
-VITE_DEV_ENV = TESTNET
+
+VITE_SATSUMA_KEY = 43072dc0399f
+
+VITE_UP_DOWN_V2_API_HOST_TESTNET = https://api-v2.buffer.finance/
+VITE_UP_DOWN_V2_API_HOST_DEVELOPMENT = https://api-v2.buffer.finance/ 
+
+VITE_LEADERBOARD_API_HOST = https://bufferrewards-production.up.railway.app/
+
+VITE_UP_DOWN_V3_HOST_TESTNET = https://instant-trading-backend-production-84c6.up.railway.app/
+VITE_PRICE_WEB_SOCKET = 
+VITE_DEV_ENV = testnet
