--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@pythnetwork/client": "^2.17.0",
     "@rainbow-me/rainbowkit": "^1.0.7",
     "@sentry/react": "^7.58.1",
+    "@sentry/vite-plugin": "^2.16.0",
     "@synthetixio/synpress": "^1.2.0",
     "@szhsin/react-menu": "^3.5.3",
     "@thirdweb-dev/react": "^3.6.9",
