--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react": "^18.2.0",
     "react-bottom-drawer": "^0.1.1",
     "react-confetti": "^6.1.0",
+    "react-container-dimensions": "^1.4.1",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
