--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "jotai": "^2.2.2",
     "keen-slider": "^6.8.5",
     "lightweight-charts": "^3.8.0",
+    "lodash": "^4.17.21",
     "network-speed": "^2.1.1",
     "numeral": "^2.0.6",
     "posthog-js": "^1.16.7",
@@ -76,6 +77,7 @@
     "react-fetch-streams": "^1.1.2",
     "react-gravatar": "^2.6.3",
     "react-html-parser": "^2.0.2",
+    "react-icons": "^5.0.1",
     "react-idle-timer": "^5.5.3",
     "react-joyride": "^2.5.4",
     "react-redux": "^7.2.6",
@@ -86,11 +88,12 @@
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
     "react-use-websocket": "^4.3.1",
-    "recharts": "2.1.10",
+    "recharts": "2.12.5",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.0",
     "sass": "^1.43.4",
+    "strftime": "^0.10.2",
     "styled-components": "^5.3.3",
     "swr": "^1.3.0",
     "tailwind-merge": "^1.10.0",
