--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
-    "build": " vite build",
+    "build": " tsc && vite build",
     "preview": "vite preview",
     "extract": "lingui extract",
     "compile": "lingui compile --typescript"
