--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
     "skipLibCheck": true,
+    "noUnusedLocals": false,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
     "strict": true,
