--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "postcss": "^8.4.19",
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
-    "typescript": "^4.6.4",
+    "typescript": "5.2.2",
     "vite": "^3.2.3",
     "vite-tsconfig-paths": "^3.6.0"
   }
