--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
     "@particle-network/rainbowkit-ext": "^1.0.2",
     "@polyjuice-provider/web3": "^0.1.2",
     "@pythnetwork/client": "^2.17.0",
-    "@rainbow-me/rainbowkit": "^1.0.7",
+    "@rainbow-me/rainbowkit": "2",
     "@safe-global/safe-apps-react-sdk": "^4.7.0",
     "@sentry/react": "^7.58.1",
     "@sentry/vite-plugin": "^2.9.0",
     "@synthetixio/synpress": "^1.2.0",
     "@szhsin/react-menu": "^3.5.3",
+    "@tanstack/react-query": "^5.49.2",
     "@thirdweb-dev/react": "^3.6.9",
     "@thirdweb-dev/sdk": "^3.6.9",
     "@vercel/analytics": "^0.1.8",
-    "@wagmi/core": "^1.3.8",
     "@web3-react/abstract-connector": "latest",
     "@web3-react/authereum-connector": "latest",
     "@web3-react/core": "^6.1.9",
@@ -97,8 +97,8 @@
     "styled-components": "^5.3.3",
     "swr": "^1.3.0",
     "tailwind-merge": "^1.10.0",
-    "viem": "^1.4.2",
-    "wagmi": "^1.3.9",
+    "viem": "2.x",
+    "wagmi": "2.x",
     "web3": "^1.6.1",
     "websocket": "^1.0.34",
     "yarn": "^1.22.19"
