--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "ethers": "^5.7.2",
+    "ethers": "5.7.2",
     "ethers-multisend": "^2.4.0",
     "events": "^3.3.0",
     "flexlayout-react": "0.6.2",
