--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.3",
     "react-secure-storage": "^1.2.2",
+    "react-slot-counter": "^3.0.1",
     "react-time-ago": "^7.3.1",
     "react-transition-group": "^4.4.2",
     "react-use": "^17.4.0",
