--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@particle-network/rainbowkit-ext": "^1.0.2",
     "@polyjuice-provider/web3": "^0.1.2",
     "@pythnetwork/client": "^2.17.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@rainbow-me/rainbowkit": "2",
     "@safe-global/safe-apps-react-sdk": "^4.7.0",
     "@sentry/react": "^7.58.1",
@@ -48,8 +50,11 @@
     "big.js": "^6.1.1",
     "bn.js": "^5.2.0",
     "chrome-tabs": "^5.4.0",
+    "class-variance-authority": "^0.7.0",
     "cloudinary": "^1.32.0",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "cva": "^0.0.0",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "ethers-multisend": "^2.4.0",
@@ -63,10 +68,12 @@
     "keen-slider": "^6.8.5",
     "lightweight-charts": "^3.8.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.439.0",
     "network-speed": "^2.1.1",
     "numeral": "^2.0.6",
     "posthog-js": "^1.16.7",
     "qrcode.react": "^3.1.0",
+    "radix-ui": "^1.0.1",
     "react": "^18.2.0",
     "react-bottom-drawer": "^0.1.1",
     "react-confetti": "^6.1.0",
@@ -97,7 +104,8 @@
     "strftime": "^0.10.2",
     "styled-components": "^5.3.3",
     "swr": "^1.3.0",
-    "tailwind-merge": "^1.10.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "2.x",
     "wagmi": "2.x",
     "web3": "^1.6.1",
