--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "buffer-ui",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "set APP_ENV=\"devnet\" && vite",
     "build": " vite build",
     "preview": "vite preview",
     "extract": "lingui extract",
